--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,9 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.14.22
 
 # Mod Properties
-mod_version=0.1.0
-maven_group=com.example
-archives_base_name=addon-template
-
-# Dependencies
+mod_version=1.0.0
+maven_group=dev.stardust
+archives_base_name=stardust
 
 # Meteor (https://maven.meteordev.org)
 meteor_version=0.5.4-SNAPSHOT
