--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,11 +1,11 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Publish Development Build
 
 on:
   push:
-    branches: [ "1.20.4" ]
+    branches: [ "1.21.1" ]
     paths-ignore:
       - '*.md'
 
@@ -19,26 +19,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Wrapper Validation
+        uses: gradle/actions/wrapper-validation@v3
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
-      # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
-      # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+      - name: Dependency Caching # Taken from github.com/FlorianMichael/BaseProject
+        uses: actions/cache@v4
+        with:
+            path: |
+                ~/.gradle/caches
+                ~/.gradle/wrapper
+            key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+            restore-keys: |
+                ${{ runner.os }}-gradle-
 
-      - name: Build with Gradle Wrapper
+      - name: Build with Gradle
         run: ./gradlew build -Pcommit=${{ github.sha }}
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Release
+        uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
-          automatic_release_tag: "latest-1.20.4"
+          automatic_release_tag: snapshot
           prerelease: true
-          title: "1.20.4 Dev Build"
+          title: Dev Build
           files: |
             ./build/libs/*.jar
