Updated version in dev build tag.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,7 +46,7 @@ jobs:
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
-          automatic_release_tag: snapshot
+          automatic_release_tag: latest-1.21.1
           prerelease: true
           title: 1.21.1 Dev Build
           files: |
