Keep Meteor dependency up-to-date

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,13 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     // Meteor
-    modImplementation "meteordevelopment:meteor-client:${project.meteor_version}"
+    modImplementation("meteordevelopment:meteor-client:${project.meteor_version}") {
+        changing = true
+    }
+
+    configurations.configureEach {
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+    }
 }
 
 processResources {
