--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,7 +5,7 @@ name: Publish Development Build
 
 on:
   push:
-    branches: [ "1.21.4" ]
+    branches: [ "main" ]
     paths-ignore:
       - '*.md'
 
