--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,15 @@ yarn_mappings=1.21.4+build.8
 loader_version=0.16.14
 
 # Mod Properties
-mod_version=1.8.3
+mod_version=1.8.4
 maven_group=dev.stardust
 archives_base_name=stardust
 
 # Meteor (https://maven.meteordev.org)
 meteor_version=1.21.4-SNAPSHOT
+
+# XaeroMinimap
+xaeros_minimap_version=25.0.0_Fabric_1.21.4
+
+# XaeroWorldmap
+xaeros_worldmap_version=1.39.2_Fabric_1.21.4
